<resources>
  <string name="app_name">OSMTracker for Android™</string>
  <string name="app_short_name">OSMTracker</string>
  <string name="app_description">Inspired by OSMTracker on Windows Mobile, it allows you to track your journeys, mark significant way points (Voice recording, photos), export them in GPX format for later use with Open Street Map tools like JOSM.</string>
  <string name="tracklogger">Track logger</string>
  <string name="tracklogger_waiting_gps">Waiting for GPS fix to enable buttons…</string>
  <string name="tracklogger_voicerec_title">Voice recording</string>
  <string name="tracklogger_voicerec_text">Recording a {0}s audio clip.</string>
  <string name="tracklogger_voicerec_stop">Stop</string>
  <string name="tracklogger_btnBack">Back</string>
  <string name="tracklogger_tracked">Tracked: </string>
  <string name="tracklogger_gps_disabled">GPS disabled</string>
  <string name="tracklogger_gps_disabled_hint">GPS is disabled. Do you want to enable it?</string>
  <string name="tracklogger_choose_gallery_camera">Gallery or camera?</string>
  <string name="tracklogger_camera">Take photo with camera</string>
  <string name="tracklogger_gallery">Select photo from gallery</string>
  <string name="wplist">Waypoint list</string>
  <string name="wplist_latitude">Lat: </string>
  <string name="wplist_longitude">Long: </string>
  <string name="wplist_elevation">Ele: </string>
  <string name="wplist_accuracy">Accur: </string>
  <string name="wplist_compass">Comp. head.:</string>
  <string name="wplist_compass_accuracy">Comp. accur.:</string>
  <string name="trackmgr">Track manager</string>
  <string name="trackmgr_tracklist">Track list:</string>
  <string name="trackmgr_waypoints_count">Waypoints: </string>
  <string name="trackmgr_trackpoints_count">Trackpoints: </string>
  <string name="trackmgr_notes_count">Notes: </string>
  <string name="trackmgr_empty">You don\'t have any tracks.</string>
  <string name="trackmgr_newtrack_hint">Press to record a new track.</string>
  <string name="trackmgr_newtrack_error">Unable to create a new track: {0}</string>
  <string name="trackmgr_continuetrack_hint">You are currently recording <b>track #{0}</b>\nChoose it in the list to continue</string>
  <string name="trackmgr_contextmenu_stop">Stop tracking</string>
  <string name="trackmgr_contextmenu_resume">Resume tracking</string>
  <string name="trackmgr_contextmenu_delete">Delete</string>
  <string name="trackmgr_contextmenu_export">Export</string>
  <string name="trackmgr_contextmenu_share">Share</string>
  <string name="trackmgr_contextmenu_osm_upload">Upload to OpenStreetMap</string>
  <string name="trackmgr_contextmenu_github_upload">Upload to GitHub</string>
  <string name="trackmgr_contextmenu_display">Display</string>
  <string name="trackmgr_contextmenu_details">Details</string>
  <string name="trackmgr_contextmenu_title">Track #{0}</string>
  <string name="trackmgr_delete_confirm">Track #{0} will be deleted</string>
  <string name="trackmgr_deleteall_confirm">All tracks will be deleted. Are you sure?</string>
  <string name="trackmgr_exporting">Exporting track #{0}…</string>
  <string name="trackmgr_exporting_prepare">Preparing export…</string>
  <string name="trackmgr_export_error">Unable to export track: {0}</string>
  <string name="trackmgr_exportall_confirm">All tracks will be exported, which could take a long time. Are you sure?</string>
  <string name="trackmgr_prepare_for_share_error">Unable to process the track: {0}</string>
  <string name="trackpckr_tracklist">List of tracks to overlay:</string>
  <string name="trackdetail">Track Details</string>
  <string name="trackdetail_startdate">Start time:</string>
  <string name="trackdetail_enddate">End time:</string>
  <string name="trackdetail_startloc">Starts at:</string>
  <string name="trackdetail_endloc">Ends at:</string>
  <string name="trackdetail_exportdate">Exported:</string>
  <string name="trackdetail_osm_upload_date">Uploaded to OpenStreetMap:</string>
  <string name="trackdetail_btn_export">Export as GPX</string>
  <string name="trackdetail_export_notyet">(Not exported yet)</string>
  <string name="trackdetail_osm_upload_notyet">(Not uploaded yet)</string>
  <string name="trackdetail_export_display">Display</string>
  <string name="trackdetail_name">Name</string>
  <string name="trackdetail_description">Description</string>
  <string name="trackdetail_tags">Tags (comma separated)</string>
  <string name="trackdetail_description_mandatory">You must enter a description</string>
  <string name="trackdetail_visibility">Visibility</string>
  <string name="osm_visibility_private">Private</string>
  <string name="osm_visibility_public">Public</string>
  <string name="osm_visibility_trackable">Trackable</string>
  <string name="osm_visibility_identifiable">Identifiable</string>
  <string name="osm_upload">OpenStreetMap upload</string>
  <string name="osm_upload_ok">Save and upload</string>
  <string name="osm_upload_tmpfile_failed">Unable to export the track to a temporary file</string>
  <string name="osm_upload_oauth_failed">Unable to authenticate to OSM</string>
  <string name="osm_upload_sending">Sending track #{0}…</string>
  <string name="osm_upload_waiting_response">Waiting for OpenStreetMap server response…</string>
  <string name="osm_upload_error">Error while uploading track</string>
  <string name="osm_upload_bad_response">The OSM server returned an error: ({0}) message {1}</string>
  <string name="osm_upload_unauthorized">Authorization error. Would you like to clear the saved OpenStreetMap credentials?</string>
  <string name="osm_upload_sucess">OpenStreetMap upload succeeded</string>
  <string name="osm_note_upload">OpenStreetMap notes upload</string>
  <string name="osm_note_upload_error">Error while uploading note</string>
  <string name="osm_note_label">Note text</string>
  <string name="osm_note_upload_ok">Upload</string>
  <string name="osm_note_upload_cancel">Cancel</string>
  <string name="osm_note_footer">via %1$s %2$s</string>
  <string name="osm_note_upload_unauthorized">Authorization error. If you previously granted the app permission to upload traces, you must clear your saved credentials in order to authorize the app to upload traces and <b>notes</b>. Would you like to clear your saved OpenStreetMap credentials?</string>
  <string name="gpsstatus_record_voicerec">Voice record</string>
  <string name="gpsstatus_record_stillimage">Take photo</string>
  <string name="gpsstatus_record_textnote">Text note</string>
  <string name="waypoint_name_label">Waypoint Name/text</string>
  <string name="waypoint_name_hint">Enter waypoint name</string>
  <string name="edit_waypoint_bt_preview">Open file</string>
  <string name="edit_waypoint_bt_save">Save</string>
  <string name="edit_waypoint_bt_delete">Delete</string>
  <string name="edit_waypoint_bt_cancel">Cancel</string>
  <string name="delete_waypoint_confirm_dialog_title">Delete waypoint</string>
  <string name="delete_waypoint_confirm_dialog_msg">Delete this waypoint?</string>
  <string name="delete_waypoint_confirm_bt_ok">Delete</string>
  <string name="delete_waypoint_confirm_bt_cancel">Cancel</string>
  <string name="note_name_label">Note Name/text</string>
  <string name="edit_note_bt_update">Save</string>
  <string name="edit_note_bt_delete">Delete</string>
  <string name="edit_note_bt_cancel">Cancel</string>
  <string name="delete_note_confirm_dialog_title">Delete note</string>
  <string name="delete_note_confirm_dialog_msg">Delete this note?</string>
  <string name="delete_note_confirm_bt_ok">Delete</string>
  <string name="delete_note_confirm_bt_cancel">Cancel</string>
  <string name="notelist">Note list</string>
  <string name="osm_note_bt_upload">Upload as OSM note</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_waypointlist">Waypoints</string>
  <string name="menu_about">About</string>
  <string name="menu_displaytrack">Display track</string>
  <string name="menu_stoptracking">Stop &amp; save</string>
  <string name="menu_newtrack">New track</string>
  <string name="menu_deletetracks">Delete all tracks</string>
  <string name="menu_continue">Continue track</string>
  <string name="menu_stopcurrenttrack">Stop current track</string>
  <string name="menu_save">Save</string>
  <string name="menu_cancel">Cancel</string>
  <string name="menu_export">Export as GPX</string>
  <string name="menu_osm_upload">OpenStreetMap upload</string>
  <string name="menu_center_to_gps">Center to GPS</string>
  <string name="menu_overlay_other">Overlay other</string>
  <string name="menu_exportall">Export all as GPX</string>
  <string name="error_externalstorage_not_writable">Unable to write to external storage.</string>
  <string name="error_create_track_dir">Unable to create track folder %s</string>
  <string name="error_externalstorage_not_writable_hint">Please check if ext. storage is correctly inserted and mounted.</string>
  <string name="error_voicerec_failed">Voice recording has failed</string>
  <string name="error_userlayout_parsing">Error while parsing XML layout file. Please revert to default layout.</string>
  <string name="error_gh_token_lenght">Token must be 40 characters</string>
  <string name="error_gh_pr_creation">Error while creating the PR</string>
  <string name="permission_required">Permission required</string>
  <string name="storage_permission_for_export_GPX">To export the GPX trace we need to write on the storage.</string>
  <string name="storage_permission_for_display_track">To display the track properly we need access to the storage.</string>
  <string name="storage_permission_for_share_track">To share the track properly we need access to the storage.</string>
  <string name="storage_permission_for_upload_to_OSM">To upload the track to OSM we need access to the storage.</string>
  <string name="acccept">Accept</string>
  <string name="gps_perms_required">Can\'t continue without GPS permission</string>
  <string name="gpx_track_name">Tracked with OSMTracker for Android™</string>
  <string name="gpx_hdop_approximation_cmt">Warning: HDOP values aren\'t the HDOP as returned by the GPS device. They\'re approximated from the location accuracy in meters.</string>
  <string name="about">About</string>
  <string name="about_text">For more information, docs and issue report, please visit the project home page:</string>
  <string name="about_translate_text">Help translating OSMTracker:</string>
  <string name="about_debug_info">Debug info</string>
  <string name="about_export_db">Export database</string>
  <string name="about_exporting_db">Exporting database…</string>
  <string name="about_export_db_result">Database export result: %s</string>
  <string name="notification_ticker_text">OSMTracker is tracking</string>
  <string name="notification_title">OSMTracker is tracking (#{0})</string>
  <string name="notification_text">Tap here to display main screen</string>
  <string name="displaytrack">Display track</string>
  <string name="displaytrack_map">Display background map</string>
  <string name="displaytrack_north">N</string>
  <string name="trackdetail_save">Save</string>
  <string name="various_unit_meters">m</string>
  <string name="various_accuracy">Accuracy</string>
  <string name="various_accuracy_with_sats">Accuracy {0}{1} ({2}/{3})</string>
  <string name="various_waiting_gps_fix">Waiting for GPS fix… ({0}/{1})</string>
  <string name="various_heading_display">{0}°</string>
  <string name="various_heading">Wait for heading…</string>
  <string name="various_heading_unknown">Heading can\'t be determined</string>
  <string name="various_export_finished">Export process finished successfully</string>
  <string name="various_waiting_position">Position not available</string>
  <string name="various_position_lat_lon">{0} {1} / {2} {3}</string>
  <string name="displaytrackmap">OpenStreetMap track display</string>
</resources>