<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/trackmgr_contextmenu_stop"
        android:title="@string/trackmgr_contextmenu_stop" />
    <item
        android:id="@+id/trackmgr_contextmenu_resume"
        android:title="@string/trackmgr_contextmenu_resume" />
    <item
        android:id="@+id/trackmgr_contextmenu_display"
        android:title="@string/trackmgr_contextmenu_display" />
    <item
        android:id="@+id/trackmgr_contextmenu_details"
        android:title="@string/trackmgr_contextmenu_details" />
    <item
        android:id="@+id/trackmgr_contextmenu_export"
        android:title="@string/trackmgr_contextmenu_export" />
    <item
        android:id="@+id/trackmgr_contextmenu_share"
        android:title="@string/trackmgr_contextmenu_share" />
    <item
        android:id="@+id/trackmgr_contextmenu_osm_upload"
        android:title="@string/trackmgr_contextmenu_osm_upload" />
    <item
        android:id="@+id/trackmgr_contextmenu_delete"
        android:title="@string/trackmgr_contextmenu_delete" />
</menu>
