<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/trackdetail_menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_save"
        android:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/trackdetail_menu_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_cancel">
    </item>
    <item
        android:id="@+id/trackdetail_menu_display"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/menu_displaytrack"
        android:titleCondensed="@string/menu_displaytrack">
    </item>
    <item
        android:id="@+id/trackdetail_menu_export"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/menu_export"
        android:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/trackdetail_menu_osm_upload"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_osm_upload">
    </item>
    
</menu>