<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

                <!-- Note Text Label -->
                <TextView
                    android:id="@+id/edit_note_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/note_name_label" />

                <!-- EditText -->
                <EditText
                    android:id="@+id/edit_note_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:maxWidth="600dp" />

                <!-- Buttons Row -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp">

                        <Button
                            android:id="@+id/edit_note_button_update"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:text="@string/edit_note_bt_update" />

                        <Button
                            android:id="@+id/edit_note_button_delete"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/edit_note_bt_delete" />

                        <Button
                            android:id="@+id/edit_note_button_osm_upload"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/osm_note_bt_upload" />
                </LinearLayout>

                <!-- Cancel Button -->
                <Button
                    android:id="@+id/edit_note_button_cancel"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/edit_note_bt_cancel"
                    android:gravity="center" />

        </LinearLayout>
</ScrollView>
